[ci] update docker recipte to easybuil 3.9.4

--- a/docker/fedora/Dockerfile
+++ b/docker/fedora/Dockerfile
@@ -1,7 +1,7 @@
 FROM fedora:latest
 
 RUN groupadd -g 9999 drFaustroll && useradd -r -u 9999 -g drFaustroll drFaustroll &&  mkdir /home/drFaustroll && chown -R \
-drFaustroll:drFaustroll /home/drFaustroll && dnf upgrade -y && dnf -y install which python2 python2-pip && pip2 install easybuild 
+drFaustroll:drFaustroll /home/drFaustroll && dnf upgrade -y && dnf -y install Lmod which python2 python2-pip && pip2 install easybuild pep8 
 
 WORKDIR /home/drFaustroll
 USER drFaustroll
