[ci] tagged docker images with easybuild version, fixes #46

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
   - build
 
 easybuild:
-  image: eslib/esl:fedora-latest-easybuild
+  image: eslib/esl:eb-v3.9.4
   stage: build
   script:
     - eb --show-config
